--- a/package.json
+++ b/package.json
@@ -3,16 +3,29 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf ./dist",
+    "build": "npm run clean && tsc -b",
+    "start": "node src",
+    "local": "ts-node src",
+    "local:watch": "nodemon src -e ts,json --exec 'npm run local'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@solana/web3.js": "^1.95.4",
     "bs58": "^6.0.0",
-    "dotenv": "^16.4.5",
+    "csv-parse": "^5.5.6",
+    "csv-parser": "^3.0.0",
+    "dotenv": "^16.4.5"
+  },
+  "description": "",
+  "devDependencies": {
+    "@types/node": "^22.9.0",
+    "nodemon": "^3.1.7",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^6.0.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
 }
