--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bs58": "^6.0.0",
     "csv-parse": "^5.5.6",
     "csv-parser": "^3.0.0",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.4.5"
   },
   "description": "",
